[tool.poetry]
name = "py-metrics"
version = "0.1.0"
description = ""
authors = ["FF"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"

[tool.poetry.scripts]
fs = "py_metrics.fs:poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"