[tool.poetry]
name = "py-metrics"
version = "0.1.0"
description = ""
authors = ["Vacuum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.8"

[tool.poetry.scripts]
fs = "py_metrics.fs:main"
mem = "py_metrics.mem:main"
cpu = "py_metrics.cpu:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"